--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_STRING = mongodb+srv://cb11cb12:FIREMongo22@cluster0.oddkr.mongodb.net/?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://cb11cb12:tHNacqlYk2rPgFK6@cluster0.oddkr.mongodb.net/?retryWrites=true&w=majority
