--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "rap-name-api",
+  "name": "fav-ufc",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cb11cb12/rap-names-express.git"
+    "url": "git+https://github.com/cb11cb12/fav-mma-fighter-express.git"
   },
   "bugs": {
     "url": "https://github.com/cb11cb12/rap-names-express/issues"
