--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "mongodb": "^3.7.3"
+    "express": "^4.18.2",
+    "mongodb": "^3.7.3",
+    "nodemon": "^2.0.20"
   },
   "repository": {
     "type": "git",
